// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action creator creates GET_MODES_BY_DATE_INITIAL_DONE action 1`] = `
Object {
  "payload": "test",
  "type": "GET_MODES_BY_DATE_INITIAL_DONE",
}
`;

exports[`action creator creates GET_MODES_BY_DATE_INITIAL_FAILED action 1`] = `
Object {
  "payload": "test",
  "type": "GET_MODES_BY_DATE_INITIAL_FAILED",
}
`;

exports[`action creator creates GET_MODES_BY_DATE_INITIAL_REQUESTED action 1`] = `
Object {
  "type": "GET_MODES_BY_DATE_INITIAL_REQUESTED",
}
`;

exports[`action creator creates getModesByDateInitial function 1`] = `[Function]`;
